# cpputils

./: .travis.yml  CMakeLists.txt  cpputils_src.pri
include/: cleanuphelper.h  cppflags.h  cppoverloadutils.h  cppsignal.h  cpptypesafeenum.h  cpputils.h
src/: arrayview.h  cleanuphelper.h  color_utils.cpp  color_utils.h  cppbitmask.h  cppmacros.h  cpptypesafeenum.h  cpputils.h  crc32builder.h  delayedconstruction.h  makearray.h  numberparsing.h  randomutils.h  refwhenneeded.h  strutils.cpp  strutils.h
test/: .gitignore  cpputilstestutils.cpp  cpputilstestutils.h  cpputilstestutils_src.pri  tst_cppbitmask.cpp  tstcpputils.pro
